# audigger

./: .gitmodules  CMakeLists.txt  HOW_TO_BUILD.txt  LICENSE  REQUIREMENTS-ubuntu.txt  build-debug.sh  build-release-noconsole.sh  build-release.sh
debian/: changelog  control  rules
samplebank/: SampleBank.cpp  SampleBank.h  deploy.sh  export.py  main.cpp  process.sh
src/: AudioBlock.cpp  AudioBlock.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceALSA.cpp  AudioDeviceALSA.h  AudioDeviceVirt.cpp  AudioDeviceVirt.h  AudioDeviceWinAPI.cpp  AudioDeviceWinAPI.h  AudioFile.cpp  AudioFile.h  AudioParams.cpp  AudioParams.h  BinderBoostThread.h  Controller.cpp  Controller.h  DSP.cpp  DSP.h  EventDistributor.h  IProcessorClient.h  LoggerPkl.cpp  LoggerPkl.h  MutexRent.cpp  MutexRent.h  Processor.cpp  Processor.h  ProcessorClient.h  ProcessorTasks.cpp  ProcessorTasks.h  RingBuff.h  Settings.cpp  Settings.h  SignalProcessor.cpp  SignalProcessor.h  TrackAbstract.h  TrackAudio.cpp  TrackAudio.h  TrackAudioHistory.cpp  TrackAudioHistory.h  (+17 more)
src/gui/: BlockTable.h  BlockTask.h  CommonGui.cpp  CommonGui.h  Dragging.h  ITracksGroupClient.h  IWidgetTracksContainer.h  MarkGUI.h  MarksInterval.h  ProjectManager.cpp  ProjectManager.h  Selection.cpp  Selection.h  ToolBar.cpp  ToolBar.h  WidgetAudioParams.cpp  WidgetAudioParams.h  WidgetDial.cpp  WidgetDial.h  WidgetHeaders.cpp  WidgetHeaders.h  WidgetTextEditEnter.h  WidgetToolBank.cpp  WidgetToolBank.h  WidgetToolBar.cpp  WidgetToolBar.h  WidgetTrackAbstract.h  WidgetTrackMarks.cpp  WidgetTrackMarks.h  WidgetTrackSonogram.cpp  WidgetTrackSonogram.h  WidgetTrackSonogramUtils.cpp  WidgetTrackSonogramUtils.h  WidgetTrackTimeLine.cpp  WidgetTrackTimeLine.h  WidgetTrackWaveForm.cpp  WidgetTrackWaveForm.h  WidgetTracksGroup.cpp  WidgetTracksGroup.h  WidgetsCommon.cpp  (+6 more)
src/gui/images/: colors-anchor.txt
test/: test_TrackMarks.cpp  trash.cpp
test/alsa-test-app/: main.cpp
test/alsa-test-app-2/: main.cpp
test/box-resize/: CMakeLists.txt  WinWin.cpp  WinWin.h  build.sh  main.cpp
test/old/: Marks.cpp.old  Marks.h.old  WidgetMain.ui  WidgetTextMarks.cpp.old  WidgetTextMarks.h.old  WidgetToolsMain.cpp.old  WidgetToolsMain.h.old  WidgetToolsMain.ui  WidgetToolsPaint.cpp.old  WidgetToolsPaint.h.old  WidgetToolsPaint.ui  WidgetTrack.cpp.old  WidgetTrack.h.old  WindowMain.ui
test/unittest/: test-audiotrack.cpp
tools/: curve.py  genxml.py
